--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:menu="@menu/top_app_menu"
+            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
             app:title="@string/app_name" />
 
     </com.google.android.material.appbar.AppBarLayout>
