--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="amber_200">#FFF5E994</color>
+    <color name="amber_500">#FFECD626</color>
+    <color name="amber_700">#FFE8AD1B</color>
+    <color name="blue_300">#FF495DEF</color>
+    <color name="blue_700">#FF0027D1</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
+    <color name="gray_200">#C3C1C1</color>
 
     <color name="hint_text_color_edit_activity">#7A8089</color>
 
