--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,10 @@
 <resources>
     <dimen name="margin_edit_activity">20dp</dimen>
     <dimen name="title_text_size">26sp</dimen>
+    <dimen name="margin_note_item">10dp</dimen>
+    <dimen name="card_corner">8dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
+    <dimen name="card_elevation">5dp</dimen>
+    <dimen name="top_margin_text">30dp</dimen>
+    <dimen name="margin_floating_button">16dp</dimen>
 </resources>
