--- a/app/src/main/res/layout/fragment_note_description.xml
+++ b/app/src/main/res/layout/fragment_note_description.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -27,6 +27,7 @@
                 android:textColor="@color/black"
                 android:textSize="@dimen/title_text_size"
                 android:textStyle="bold"
+                android:maxLength="25"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_margin="@dimen/margin_note_item"
