--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -22,6 +22,7 @@
             android:textColor="@color/black"
             android:textSize="@dimen/title_text_size"
             android:textStyle="bold"
+            android:maxLength="25"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="@string/title" />
