--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray_200">#C3C1C1</color>
+    <color name="red">#CC0000</color>
 
     <color name="hint_text_color_edit_activity">#7A8089</color>
 
