--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="card_elevation">5dp</dimen>
     <dimen name="top_margin_text">30dp</dimen>
     <dimen name="margin_floating_button">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
