--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/amber_500" />
+    <solid android:color="@color/secondaryColor" />
 
     <corners android:radius="@dimen/card_corner" />
 
