--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -18,8 +18,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:menu="@menu/top_app_menu"
-                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                 app:navigationContentDescription="@string/back"
+                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                 app:title="@string/app_name" />
 
         </com.google.android.material.appbar.AppBarLayout>
@@ -42,12 +42,10 @@
 
                     <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/et_title"
+                        style="@style/Title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/title"
-                        android:textColor="@color/black"
-                        android:textColorHint="@color/hint_text_color_edit_activity"
-                        android:textSize="@dimen/title_text_size"
                         tools:ignore="SpeakableTextPresentCheck" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -63,15 +61,23 @@
 
                     <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/et_text"
+                        style="@style/Text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="top"
                         android:hint="@string/text"
-                        android:textColor="@color/black"
-                        android:textColorHint="@color/hint_text_color_edit_activity"
                         tools:ignore="SpeakableTextPresentCheck" />
 
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_download_note"
+                    style="@style/Button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_note_item"
+                    android:text="@string/get_note_from_firebase"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </LinearLayout>
 
