--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="amber_200">#FFF5E994</color>
-    <color name="amber_500">#FFECD626</color>
-    <color name="amber_700">#FFE8AD1B</color>
-    <color name="blue_300">#FF495DEF</color>
-    <color name="blue_700">#FF0027D1</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray_200">#C3C1C1</color>
     <color name="red">#CC0000</color>
+
+    <color name="primaryColor">#6a1b9a</color>
+    <color name="primaryLightColor">#9c4dcc</color>
+    <color name="primaryDarkColor">#38006b</color>
+    <color name="secondaryColor">#2a1b9a</color>
+    <color name="secondaryLightColor">#6446cc</color>
+    <color name="secondaryDarkColor">#00006a</color>
+    <color name="primaryTextColor">#ffffff</color>
+    <color name="secondaryTextColor">#ffffff</color>
 
     <color name="hint_text_color_edit_activity">#7A8089</color>
 
